--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:title" content="Project_Equalrights" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://google.com/+teemocogs/" />
-<meta property="og:image" content="http://7.kxgen.net/images/fb.png" />
+<meta property="og:image" content="https://lh5.googleusercontent.com/-5ucq8HYiQUQ/ThoUN84RfII/AAAAAAAAALk/gsVHSBxWhy4/s367-no/9018-2.gif" />
 <meta property="og:site_name" content="Project_Equalrights" />
 <meta property="og:description" content="" />
 <script>
@@ -23,7 +23,7 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-36746447-1', 'auto');
+  ga('create', 'UA-36746447-2', 'auto');
   ga('send', 'pageview');
 </script>
 </head>
@@ -146,7 +146,7 @@
 <canvas id="canvas" class="hide"></canvas>
 <canvas id="thumb" class="hide"></canvas>
 <canvas id="result" class="hide"></canvas>
-<a id="download" class="hide" download="7.png">Download</a>
+<a id="download" class="hide" download="Project_Equalrights.png">Download</a>
 <script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 <script src="vender/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
