--- a/index.html
+++ b/index.html
@@ -136,11 +136,13 @@
 </div>
 
 <div id="copyright" class="text-center">
+<small> forked by teemocogs (originally from kxapp & unfold)</small>
+<br>
+原程式來自 &amp; 
 <a href="https://www.facebook.com/kxgen" target="_blank">kxapp</a> &amp; 
-<a href="https://www.facebook.com/unfoldgroup" target="_blank">unfold</a> 出品，
+<a href="https://www.facebook.com/unfoldgroup" target="_blank">unfold</a> ，
 <a href="https://github.com/goooooooogle/profile-picture-generator" target="_blank">歡迎 fork</a>
 <br>
-<small>forked by teemocogs.</small>
 <small>for Google Chrome only.</small>
 </div>
 
