copyright info update

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <div id="copyright" class="text-center">
 <small> forked by teemocogs (originally from kxapp & unfold)</small>
 <br>
-原程式來自 &amp; 
+原程式來自 
 <a href="https://www.facebook.com/kxgen" target="_blank">kxapp</a> &amp; 
 <a href="https://www.facebook.com/unfoldgroup" target="_blank">unfold</a> ，
 <a href="https://github.com/goooooooogle/profile-picture-generator" target="_blank">歡迎 fork</a>
